@startuml

class InventoryTracker {
    start()
    main()
}

class SceneManager {
    scenes: Map<String, Scene>

    load(): void
    getScene(String): Scene
}

class MainWindowController implements Initializable {
    - choiceBox: ChoiceBox<String>
    - searchQueryField: TextField
    - itemsTableView: TableView<Item>
    - itemsValueColumn: TableColumn<Item, Double>
    - itemsSerialNumberColumn: TableColumn<Item, String>
    - itemsNameColumn: TableColumn<Item, String>

    - model: ItemModel
    - sceneManager: SceneManager
    - fileManager: FileManager
    - mainStage: Window

    <<constructor>> MainWindowController(ItemModel, SceneManager)

    addNewItemButtonClicked(ActionEvent): void
    deleteSelectedItemButtonClicked(ActionEvent): void
    editNameText(TableColumn.CellEditEvent<Item, String>): void
    editSerialNumberText(TableColumn.CellEditEvent<Item, String>): void
    editValueText(TableColumn.CellEditEvent<Item, Double>): void
    saveAsButtonClicked(ActionEvent): void
    loadButtonClicked(ActionEvent): void

    + initialize(URL, ResourceBundle): void

    - removeItem(int): void
    - editName(Item, String): void
    - editSN(Item, String): void
    - editValue(Item, Double): void

}

class AddItemWindowController {
    - valueField: TextField
    - serialNumberField: TextField
    - nameField: TextField
    - errorLabel: Label

    - model: ItemModel
    - sceneManager: SceneManager

    <<constructor>> AddItemWindowController(ItemModel, SceneManager)

    cancelClicked(ActionEvent): void
    confirmClicked(ActionEvent): void

    - clearFields(): void
}

class ItemModel {
    - items: ObservableList<Item>

    <<constructor>> ItemModel()
    <<constructor>> ItemModel(ObservableList<Item>)

    + getItems(): ObservableList<Item>
    + get(int): Item
    - remove(int): void
    + isValidSerialNumber(String): boolean
    + isUnique(String): boolean
    + enoughChars(String): boolean
    - hasCorrectChars(String): boolean
    - isUniqueSerialNumber(String): boolean
}

class Item {
    - name: SimpleStringProperty
    - serialNumber: SimpleStringProperty
    - value: SimpleDoubleProperty

    <<constructor>> Item(String, String, Double)
    <<constructor>> Item(String)

    + getName(): String
    + setName(String): void
    - isValidName(String): boolean
    + getSerialNumber(): String
    + setSerialNumber(String): void
    + getValue(): double
    + setValue(double): void
    + nameProperty(): SimpleStringProperty
    + serialNumberProperty(): SimpleStringProperty
    + valueProperty(): SimpleDoubleProperty
    + toTSVLine(): String
    + toHTMLLine(): String
}

class FileManager {
    + saveAsTSV(ItemModel, File): void
    + loadTSV(ItemModel, File): void
    + saveAsHTML(ItemModel, File): void
    + loadHTML(ItemModel, File): void
    + saveAsJSON(ItemModel, File): void
    + loadJSON(ItemModel, File): void
}

openjfx.org.Application <|-- InventoryTracker
InventoryTracker - SceneManager
SceneManager -- MainWindowController
SceneManager -- AddItemWindowController
MainWindowController o-- ItemModel
AddItemWindowController o-- ItemModel
ItemModel *- Item
MainWindowController o-- FileManager
@enduml